Fix subsilver2 text alignment issue

--- a/mssti_abbc3/root/styles/abbcode/abbcode.css
+++ b/mssti_abbc3/root/styles/abbcode/abbcode.css
@@ -1,10 +1,6 @@
 /* ABBC3 Markup Styles
 ---------------------------------------- */
 
-.cat {
-	text-indent: 0;
-}
-
 .helpline {
 	width: 100%;
 	overflow: hidden;
